@@ -3,6 +3,7 @@ Release 0.92.3 - Unreleased
   BUG FIXES
    HBASE-6649  [0.92 UNIT TESTS] TestReplication.queueFailover occasionally fails [Part-1]
                (Devaraj Das via Stack)
+   HBASE-6847  HBASE-6649 broke replication (Devaraj Das via JD)
 
   IMPROVEMENTS
 
